--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.3"
   }
 }
